--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -19,6 +19,7 @@
   &__link,
   &__copyright {
     opacity: 0.2;
+    width: 50%;
   }
 
   &__link {
