--- a/sass/sections/_slogan.scss
+++ b/sass/sections/_slogan.scss
@@ -5,7 +5,7 @@
   &__hexagons {
     position: absolute;
     top: 45px;
-    right: 0;
+    right: -1px;
     z-index: 10;
   }
   &__ellipse {
@@ -29,6 +29,7 @@
   &__author {
     margin-right: 100px;
     text-transform: none;
+    font-size: 20px;
     font-weight: $font-weight-thin;
   }
 }
